@@ -189,6 +189,7 @@ Release 0.21.0 - Unreleased
                (Lars George and Gary Helmling via Stack)
    HBASE-2156  HBASE-2037 broke Scan - only a test for trunk
    HBASE-2057  Cluster won't stop (Gary Helmling and JD via JD)
+   HBASE-2160  Can't put with ts in shell
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
